<resources>
    <string name="app_name">VeloRoute</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_maps">Map</string>

    <string name="no_view_map">не отображать</string>
    <string name="normal_mode_map">обычный режим</string>
    <string name="satellite_mode_map">снимки со спутника</string>
    <string name="terrain_mode_map">рельеф местности</string>
    <string name="hybrid_mode_map">sattelite + info</string>
    <string name="enable_gps">turn on_GPS</string>
    <string name="enable_record">turn on recording</string>

    <!--SETTINGS-->

    <string-array name="entries">
        <item>English</item>
        <item>Русский</item>
        <item>Українська</item>
    </string-array>

    <string-array name="entry_map_style">
        <item>Не отображать карту</item>
        <item>Обычная карта</item>
        <item>Рельеф</item>
        <item>Спутник</item>
        <item>Гибридная</item>
    </string-array>

    <string name="default_map_style">default_map_style</string>
    <string-array name="entry_map_style_value">
        <item>no_map</item>
        <item>normal</item>
        <item>terrain</item>
        <item>satellite</item>
        <item>hybrid</item>
    </string-array>

    <string-array name="entry_width_line">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="width_line">width_line</string>

    <!--SETTINGS-->


    <string name="menu_home">Main</string>
    <string name="menu_source_water">Water sources</string>
    <string name="menu_places">Intresting places</string>
    <string name="menu_my_track">My tracks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">Map</string>
    <string name="menu_about">About</string>
    <string name="menu_weekend_place">Resting-places</string>

    <string name="description_route">route description</string>
    <string name="show_route">Показать маршрут на карте</string>
    <string name="distance">Distance</string>
    <string name="ground_asphalt">Road/Dirt, %:</string>


    <string name="XY"> <b>Холодный яр</b> – святое место для украинцев. Эта уникальная местность таит в себе загадки многих исторических событий Украины: Колиивщина, освободительная борьба, казацкое сопротивление, Холодноярская республика, партизанское движение. Сама местность имеет уникальный ландшафт: разнообразная и неповторимая природа, крутые склоны оврагов и балок, покрытых густым лесом с тысячелетними великанами – дубами и ясенями. В самом названии "Холодный Яр" есть какая-то таинственная, притягательная и магическая сила. По легенде во времена монголо-татарского нашествия над рекой Серебрянкой в лесных чащах пряталась Меланка Холодная с детьми. Со временем к ней присоединились другие беглецы, и возникло поселение с названием Холодное. С тех пор и леса вокруг него назвали Холодноярскими. Но вероятнее, название "Холодный Яр" имеет климатологическое происхождение. В глубоких лесистых впадинах и балках, как известно, летом собирается холодный воздух и из них всегда тянет прохладой. Поэтому местные жители и назвали эту территорию Холодным Яром.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="text_sign_in_g">or sign in with G+</string>
    <string name="text_sign_in_anon">or sign in anonymously</string>

    <string name="hint_email">e-mail</string>
    <string name="hint_pass">password</string>
    <string name="hint_enter_pass">enter pass</string>
    <string name="hint_enter_email">enter your email</string>
    <string name="hint_confirm_pass">confirm pass</string>
    <string name="hint_enter_name">enter name or nickname</string>

    <string name="btn_name">name</string>
    <string name="btn_distance">distance</string>
    <string name="btn_road">road</string>
    <string name="btn_sign_in">sign in</string>
    <string name="btn_sign_up">sign up</string>
    <string name="btn_all">all</string>
    <string name="btn_short"><![CDATA[short ( < 50 km)]]></string>
    <string name="btn_middle">middle (50–100 km)</string>
    <string name="btn_long"><![CDATA[long (> 100 km)]]></string>
    <string name="btn_ok">OK</string>

    <string name="msg_sign_in_g">Sign in with G+</string>
    <string name="msg_empty_fields">one ore more fields are empty</string>
    <string name="msg_pass_mismatch">Passwords do not match</string>
    <string name="msg_sign_in_email">sign in with email</string>
    <string name="msg_sign_in_anon">sign in anonymously</string>

    <string name="msg_err_auth_failed">Authentication failed.</string>
    <string name="msg_err_sign_up_failed">sign up error</string>

    <string name="title_filter_distance">distance:</string>
    <string name="title_sort">Sort</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_anon">anonymous</string>
    <string name="title_sort_by">sort_by:</string>
    <string name="msg_wait">wait...</string>


</resources>
