<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_remove"
        android:title=""
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:actionLayout="@layout/activity_main"
        app:showAsAction="always" />

    <item
        android:icon="@android:drawable/ic_menu_directions"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/start"
                android:orderInCategory="1"
                android:title="@string/enable_gps"
                app:showAsAction="never" />
            <item
                android:id="@+id/stop"
                android:orderInCategory="1"
                android:title="@string/enable_record"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:icon="@android:drawable/ic_dialog_map"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/no_map"
                android:orderInCategory="2"
                android:title="@string/no_view_map"
                app:showAsAction="never" />
            <item
                android:id="@+id/normal_map"
                android:orderInCategory="2"
                android:title="@string/normal_mode_map"
                app:showAsAction="never" />
            <item
                android:id="@+id/satellite_map"
                android:orderInCategory="2"
                android:title="@string/satellite_mode_map"
                app:showAsAction="never" />
            <item
                android:id="@+id/terrain_map"
                android:orderInCategory="2"
                android:title="@string/terrain_mode_map"
                app:showAsAction="never" />
            <item
                android:id="@+id/hybrid_map"
                android:orderInCategory="2"
                android:title="@string/hybrid_mode_map"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
